RESOLVED FIXED278294
[Navigation] Fix navigation-history-entry/current-basic.html
https://bugs.webkit.org/show_bug.cgi?id=278294
Summary [Navigation] Fix navigation-history-entry/current-basic.html
Rob Buis
Reported 2024-08-18 12:10:29 PDT
Fix navigation-history-entry/current-basic.html.
Attachments
Rob Buis
Comment 1 2024-08-18 12:12:42 PDT
EWS
Comment 2 2024-08-19 13:44:57 PDT
Committed 282458@main (9a0cd9a20789): <https://commits.webkit.org/282458@main> Reviewed commits have been landed. Closing PR #32359 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-19 13:45:23 PDT
Note You need to log in before you can comment on or make changes to this bug.