[Navigation] Fix navigation-history-entry/current-basic.html https://bugs.webkit.org/show_bug.cgi?id=278294

Reviewed by Alex Christensen.

Right now we use the HistoryItem to obtain the url string. However, same document
navigations change the current HistoryItem, so the NavigationHistoryEntry before and
after the same document navigation would share the same HistoryItem reference and thus
the same url string. To fix this, make NavigationHistoryEntry have its own url string
copy on NavigationHistoryEntry creation.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-history-entry/current-basic-expected.txt:
* Source/WebCore/page/NavigationHistoryEntry.cpp:
(WebCore::NavigationHistoryEntry::NavigationHistoryEntry):
(WebCore::NavigationHistoryEntry::url const):
* Source/WebCore/page/NavigationHistoryEntry.h:

Canonical link: https://commits.webkit.org/282458@main